--- a/ASP_ADMIN_TIENDA/ASP_ADMIN_TIENDA.csproj
+++ b/ASP_ADMIN_TIENDA/ASP_ADMIN_TIENDA.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App\Default.aspx" />
+    <Content Include="App\Menu.aspx" />
     <Content Include="App\Scripts\StyleSheet1.css" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -77,6 +78,13 @@
     </Compile>
     <Compile Include="App\Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="App\Menu.aspx.cs">
+      <DependentUpon>Menu.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="App\Menu.aspx.designer.cs">
+      <DependentUpon>Menu.aspx</DependentUpon>
     </Compile>
     <Compile Include="App\Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
@@ -90,6 +98,7 @@
   <ItemGroup>
     <Folder Include="App\Images\" />
     <Folder Include="App\Styles\" />
+    <Folder Include="App_Code\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
